# secure_tourism_db_system

./: CMakeLists.txt
forms/: MainWindow.ui  mainwindow.ui
include/: Client.h  Controller.h  Database.h  EncryptionManager.h  FileManager.h  MainWindow.h  Record.h  SearchManager.h
src/: Client.cpp  Controller.cpp  Database.cpp  EncryptionManager.cpp  FileManager.cpp  MainWindow.cpp  Record.cpp  SearchManager.cpp  main.cpp  mainwindow.cpp
